# pdf_organizer

./: README.md  categories.yaml  pyproject.toml
pdf_organizer/: classify.py  cli.py  config.py  extract.py  organize.py
tests/: test_classify.py  test_filename_classify.py  test_organize.py
